--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -3,26 +3,94 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add new User</title>
+    <title>Пользователи</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </head>
-<body>
 
-<form th:action="@{/admin/add}" th:method="post" th:object="${user}">
-    <label for="username">Enter username: </label>
-    <input type="text" th:field="*{username}" id="username" placeholder="Username" required/>
-    <label for="password">Enter password: </label>
-    <input type="text" th:field="*{password}" id="password" placeholder="Password" required/>
-    <br/>
-    <div>
-        <label><input type="checkbox" name="roles" value="1"> ROLE_ADMIN</label>
-        <label><input type="checkbox" name="roles" value="2"> ROLE_USER</label>
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="">
+        <span class="font-weight-bold" th:text="${current_user.getUsername()}"/> with roles:
+        <span th:each="role : ${current_user.getAuthorities()}">
+            <span th:text="${role.getAuthority()}"/>
+        </span>
+    </a>
+    <form class="form-inline" th:action="@{/logout}">
+        <button type="submit" class="btn btn-dark ml-auto">Logout</button>
+    </form>
+</nav>
+<body>
+<main class="d-flex flex-nowrap">
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-white" style="width: 280px;">
+        <ul class="nav nav-pills flex-column mb-auto">
+            <li class="nav-item">
+                <a href="/admin/" class="nav-link active" aria-current="page">
+                    Admin
+                </a>
+            </li>
+            <li>
+                <a href="/admin/user" class="nav-link text-blue">
+                    User
+                </a>
+            </li>
+        </ul>
     </div>
-    <br/><br/>
-    <input type="submit" value="Add user"/>
-</form>
-<br>
-<a href="/admin/">Обратно к списку пользователей</a>
-<br>
-<a href="/logout">Logout</a>
+    <div class="b-example-divider b-example-vr"></div>
+
+    <div class="col">
+        <h1>Admin panel</h1>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/">Users table</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/admin/add">New user</a>
+        </ul>
+        <table class="table table-striped table-hover">
+            <thead class="table-light">
+
+            </thead>
+            <tr><h3>Add new user</h3></tr>
+            </thead>
+            <tbody>
+            <form th:action="@{/admin/add}" th:method="post" th:object="${user}">
+                <div class="mb-3 col-sm-3" style="text-align: center; margin: 0 auto;">
+                <label for="username" class="form-label">Enter username: </label>
+                <input type="text" class="form-control" th:field="*{username}" id="username" placeholder="Username" required/>
+                </div>
+                <div class="mb-3 col-sm-3" style="text-align: center; margin: 0 auto;">
+                <label for="password" class="form-label">Enter password: </label>
+                <input type="text" class="form-control" th:field="*{password}" id="password" placeholder="Password" required/>
+                </div>
+
+                <div class="form-group col-sm-3" style="text-align: center; margin: 0 auto;">
+                    <span class="font-weight-bold">Role</span>
+                    <select multiple class="form-control"
+                            name="roles" size="2">
+                        <div th:each="role : ${roles}">
+                            <option th:text="${role.getRoleName()}"
+                                    th:value="${role.getId()}"
+                                    th:field="*{roles}"/>
+                        </div>
+                    </select>
+                </div>
+                </br>
+                <div style="text-align: center; margin: 0 auto;">
+                <input type="submit" class="btn btn-success" value="Add user"/>
+                </div>
+            </form>
+            </tbody>
+        </table>
+    </div>
+</main>
 </body>
 </html>
