--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,30 +1,70 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>User info</title>
+    <title>Пользователи</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </head>
+
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="">
+        <span class="font-weight-bold" th:text="${current_user.getUsername()}"/> with roles:
+        <span th:each="role : ${current_user.getAuthorities()}">
+            <span th:text="${role.getAuthority()}"/>
+        </span>
+    </a>
+    <form class="form-inline" th:action="@{/logout}">
+        <button type="submit" class="btn btn-dark ml-auto">Logout</button>
+    </form>
+</nav>
 <body>
-<table >
-    <tr>
-        <th>ID</th>
-        <th>Username</th>
-        <th>Password</th>
-        <th>Role</th>
-    </tr>
-    <tr>
-        <td th:text="${user.getId()}"/>
-        <td th:text="${user.getUsername()}"/>
-        <td th:text="${user.getPassword()}"/>
-        <td th:each="role:${user.getAuthorities()}" th:text="${role.getAuthority()}"/>
-    </tr>
-    </p>
-    <div th:if="${#request.isUserInRole('ROLE_ADMIN')}">
-        <a href="/admin/">Вернуться к списку пользователей</a>
-        <br/><br/>
+<main class="d-flex flex-nowrap">
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-white" style="width: 280px;">
+        <ul class="nav nav-pills flex-column mb-auto">
+            <div th:if="${#request.isUserInRole('ROLE_ADMIN')}">
+            <li class="nav-item">
+                <a href="/admin/" class="nav-link text-blue">
+                    Admin
+                </a>
+            </li>
+            </div>
+            <li>
+                <a href="/admin/user" class="nav-link active" aria-current="page">
+                    User
+                </a>
+            </li>
+        </ul>
     </div>
-</table>
-<br>
-<a href="/logout">Logout</a>
+    <div class="b-example-divider b-example-vr"></div>
+
+    <div class="col">
+        <table class="table table-striped table-hover">
+            <tr>
+                <th>ID</th>
+                <th>Username</th>
+                <th>Password</th>
+                <th>Role</th>
+            </tr>
+            <tr>
+                <td th:text="${current_user.getId()}"/>
+                <td th:text="${current_user.getUsername()}"/>
+                <td th:text="${current_user.getPassword()}"/>
+                <td th:each="role:${current_user.getAuthorities()}" th:text="${role.getAuthority()}"/>
+            </tr>
+            </p>
+        </table>
+    </div>
+</main>
 </body>
 </html>
